fixed spacing on most mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
     margin-top: 10em;
     margin-bottom: 5%;
     width: 100%;
@@ -118,9 +119,9 @@ h1 {
 }
 
 .polaroid {
-    margin: 20px;
-    height: 295px;
-    width: 290px;
+    margin: 1em;
+    height: 18.5em;
+    width: 18em;
     padding: 15px;
     background-color: #e9e9e9;
     box-sizing: border-box;
